# savecontext

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPLETE.md  CONTRIBUTING.md  LICENSE  LICENSING.md  NEXT_STEPS.md  README.md  STATUS.md  benchmark_final.py  configure-project.js  install.sh  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  test_context.js  test_self.js
cli/: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json
cli/migrations/: 002_add_multi_path_sessions.sql  003_add_agent_sessions.sql  004_add_memory_and_tasks.sql  006_rename_tasks_to_issues.sql  008_dynamic_vec_dimensions.sql  009_rename_task_to_reminder.sql  010_issue_projects.sql  011_blob_embeddings.sql  012_tiered_embeddings.sql  013_plan_session_binding.sql  014_close_reason.sql  015_add_time_entries.sql
cli/src/: error.rs  index.ts  lib.rs  main.rs  validate.rs
cli/src/cli/: mod.rs
cli/src/cli/commands/: checkpoint.rs  compaction.rs  completions.rs  config.rs  context.rs  embeddings.rs  init.rs  issue.rs  memory.rs  mod.rs  plan.rs  prime.rs  project.rs  remote.rs  session.rs  skills.rs  status.rs  sync.rs  time_entry.rs  version.rs
cli/src/config/: mod.rs  plan_discovery.rs  status_cache.rs
cli/src/embeddings/: chunking.rs  config.rs  factory.rs  huggingface.rs  mod.rs  model2vec.rs  ollama.rs  provider.rs  types.rs
cli/src/model/: mod.rs  plan.rs  project.rs
cli/src/storage/: events.rs  migrations.rs  mod.rs  schema.rs  sqlite.rs
cli/src/sync/: export.rs  file.rs  hash.rs  import.rs  mod.rs  status.rs  types.rs
dashboard/: README.md  next.config.ts  package.json  tsconfig.tsbuildinfo
dashboard/app/: globals.css  layout.tsx
dashboard/app/dashboard/: layout.tsx  page.tsx
dashboard/components/dashboard/: active-agents-section.tsx  checkpoint-list.tsx  checkpoint-modal.tsx  context-item-card.tsx  context-items-section.tsx  delete-session-dialog.tsx  header.tsx  inline-status-select.tsx  issues-client.tsx  manage-projects-dialog.tsx  memory-client.tsx  plans-client.tsx  session-actions.tsx  session-card-content.tsx  session-detail-header.tsx  session-filters.tsx  sidebar.tsx
dashboard/components/dialogs/: delete-context-dialog.tsx  edit-context-dialog.tsx
dashboard/components/projects/: create-project-dialog.tsx  delete-project-dialog.tsx  merge-project-dialog.tsx  project-actions.tsx  project-card.tsx  projects-header.tsx  rename-project-dialog.tsx
dashboard/components/ui/: animated-background.tsx  announcement-bar.tsx  confirm-dialog.tsx  dropdown.tsx  empty-state.tsx  error-boundary.tsx  issue-progress.tsx  local-date.tsx  status-pill.tsx
dashboard/lib/: api-utils.ts  db-adapter.ts  db.ts  events.ts  types.ts
dashboard/lib/constants/: context-config.ts  issue-config.tsx  labels.ts  plan-config.tsx  time.ts
dashboard/lib/hooks/: use-click-outside.ts  use-issue-events.ts  use-modal.ts  use-query-filters.ts
db/: README.md  package.json  schema.prisma  seed.ts
docker/: Dockerfile  authorized_keys.example  docker-compose.yml  entrypoint.sh  setup.sh  sshd_config
docs/: HOOKS.md  MCP-TOOLS.md  SCHEMA.md
migrations/: 007_embeddings_support.sql
scripts/: toggle-mcp-mode.sh
server/: .npmignore  package.json  test-sync.mjs  tsconfig.json
server/scripts/: launch.sh  statusline.json  statusline.py  statusline.sh  test-cli-bridge.sh  update-status-cache.py
server/src/: cloud-client.ts  crypto.ts  index.ts  queue.ts  sync.ts  token-counter.ts
src/: benchmark.py  code_to_image.py  scale_benchmark.py  scale_test_qwen.py  text_rag.py  vision_query.py
tests/: test_openrouter.py
(+183 files in other folders)
